@@ -1,13 +1,12 @@
 Package: Rcgmin
 Type: Package
 Title: Conjugate gradient minimization of nonlinear functions with box constraints
-Version: 2014-7.17
-Date: 2014-07-17
-Author: John C. Nash <nashjc@uottawa.ca>
+Version: 2018-11.8
+Date: 2018-11-08
 Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
         c("aut", "cre"), email = "nashjc@uottawa.ca") )
 Maintainer: John C. Nash <nashjc@uottawa.ca>
-Description: Conjugate gradient minimization of nonlinear functions with box constraints incorporating Dai/Yuan update
+Description: Conjugate gradient minimization of nonlinear functions with box constraints using Dai/Yuan update.
 Depends: optextras
 License: GPL (>= 2)
 
